--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
